Changes after KPresenter 1.4
============================
Fixes:
- Fixed Bug 47825 object appeared on the wrong page after save/open in kpr format

Changes:
- Added auto guidelines
- Now we can or not display object from master page
- Draw objects of the master slide behind the objects of the current slide.

Changes after KPresenter 1.3
============================
Fixes:
- Fixed undo of delete and group command
- Fixed possible crash in presentation mode if not all slides are shown
- Fixed take tmp objects for redrawing in effect from the correct page
- Fixed show the duration for the correct page if not all slides are shown
- Fixed crash in infinite loop presentation mode when first slide is not shown
- Fixed redrawing of lines in drawing mode in case of a repaint event
- Fixed aligning of rotated lines and line with pen.width() > 1
- Fixed that the width/height of an rotated object could be negative
- Fixed copy and paste when one pic is in the copied objects
- Fixed crash in history of group/ungroup commands
- Ignore sticky objects when duplicating a page
- Fixed Object Effects are not correctly done (#64384)
- Fixed drawing of rect with round corners when zoomed and gradient filling
- Fixed no alpha channel set on mirrored pictures
- Fixed objects placed on wrong page after saving and loading in kpr file format
- Fixed picture not updated when only depth is changed
- Fixed saving of document type for webpresentations

Changes:
- Flip now works as in Gimp. Horizontal flip flips on y-axis
  vertical filp on x-axis
- Group objects: The grouped object is now in the z-order of the upperst
  object grouped and no longer on the top.
- Ungroup object: The objects are now in the z-order where the group object 
  was and no longer on top.
- If a page is shown more than once during a presentation add the time for 
  the duration instead of showing only the last duration.
- Use kspell2
- Now PresSpeed is into each page